--- a/index.html
+++ b/index.html
@@ -32,7 +32,7 @@
     <div class="header">
       <h1>
         <span class="site-title">Shivam Pandey</span>
-        <span class="site-description">Programmer • Software Developer • Web Developer </span>
+        <span class="site-description"> Software Developer </span>
       </h1>
       <div class="header-icons">
         <a aria-label="My LinkedIn Profile" target="_blank" href="https://www.linkedin.com/in/shivam-pandey-77530a202/">
@@ -42,11 +42,13 @@
           <i class="icon fa fa-github-alt" aria-hidden="true"></i>
         </a>
         <a aria-label="My Résumé" target="_blank"
-          href="https://drive.google.com/file/d/18BIu5CIIqQ1bt72QF16jJN9tEMkuO2QW/view">
+          href="https://drive.google.com/file/d/1z7TtVUMm96iF9v7jAj2WPYJGRPv4-VTb/view?usp=sharing">
           <i class="icon fa fa fa-file-pdf-o" aria-hidden="true"></i>
         </a>
-        <a aria-label="Send Email" href="mailto:shivampandey552020@gmail.com" target="_blank"><i
-            class="icon fa fa-envelope"></i></a>
+        <a aria-label="Send Email" href="mailto:shivampandey552020@gmail.com" target="_blank">
+          <i class="icon fa fa-envelope"></i>
+        </a>
+
       </div>
       <div class="header-links">
         <a class="link" href="#about" data-scroll>About Me</a>
@@ -65,13 +67,23 @@
         <img src="./assets/img/jpg/DP .jpg" alt="Professional Me" width="20%" style="border-radius: 50%" />
       </picture>
       <p>
-        I am a <strong>final-year</strong> student in <strong>Chhatrapati Shahu Ji Maharaj University, Kanpur</strong>,
-        pursuing an undergraduate degree. I am majoring in <strong>Computer Science and Engineering</strong>. Also I'm a
-        competitve programmer with keen interest in field of Software development. I'm also core-team member in domain
-        of <strong>Competitve Programming</strong> in my college.
-        I have made several development projects involving concepts of Front-End as well as Back-End. Furthermore, I
-        have experience as a <strong> Problem Setter </strong> at iMocha.
+        I am a <strong>Software Developer</strong> currently working at <strong>CEOITBOX</strong>, where I specialize in
+        building scalable web applications using the <strong>MERN stack (MongoDB, Express.js, React.js, and
+          Node.js)</strong>. With hands-on experience in both frontend and backend development, I have developed robust
+        solutions that ensure responsive UI/UX and efficient server-side functionality. I am well-versed in implementing
+        authentication and authorization using <strong>JWT</strong> and integrating third-party services like
+        <strong>Firebase</strong> and <strong>OAuth 2.0</strong> for seamless user experience.
+
+        I also have a strong interest and background in <strong>Competitive Programming</strong> and was a
+        <strong>core-team member</strong> for the same domain during my time at <strong>Chhatrapati Shahu Ji Maharaj
+          University, Kanpur</strong>, from where I graduated in <strong>Computer Science and Engineering</strong>.
+
+        Additionally, I have experience as a <strong>Software Developer Intern</strong> at <strong>EFKON India</strong>,
+        where I worked on Electronic Enforcement Systems using AI-based technologies like <strong>NVIDIA
+          DeepStream</strong> and <strong>DeepSORT</strong> tracking for ANPR. I also served as a <strong>Problem
+          Setter</strong> at <strong>iMocha</strong>, contributing algorithmic problems for assessments.
       </p>
+
     </div>
 
     <!-- User Specifics -->
@@ -81,8 +93,9 @@
         <h2>Languages</h2>
         <i class="devicon-cplusplus-plain colored"></i>
         <i class="devicon-javascript-plain colored"></i>
+        <i class="devicon-typescript-plain colored"></i>
         <i class="devicon-java-plain-wordmark colored"></i>
-        <p>My favorite languages for systems programming, software engineering, and data analysis.</p>
+        <p>Languages I use for systems programming, full-stack development, and scripting tasks.</p>
       </div>
 
       <!-- Technology Stack #2: Front-End -->
@@ -91,6 +104,7 @@
         <i class="devicon-react-original colored"></i>
         <i class="devicon-tailwindcss-original-wordmark colored"></i>
         <i class="devicon-html5-plain-wordmark colored"></i>
+        <i class="devicon-css3-plain-wordmark colored"></i>
         <p>My preferred technologies for front-end web development and component design.</p>
       </div>
 
@@ -98,8 +112,8 @@
       <div class="tech">
         <h2>Back-End</h2>
         <i class="devicon-nodejs-plain colored"></i>
-        <i class="devicon-mongodb-plain-wordmark colored"></i>
         <i class="devicon-express-original-wordmark colored"></i>
+        <i class="devicon-mongodb-plain-wordmark colored"></i>
         <i class="devicon-mysql-plain-wordmark colored"></i>
         <p>My preferred technologies for back-end web programming and database architecture.</p>
       </div>
@@ -108,12 +122,14 @@
       <div class="tech">
         <h2>Tools</h2>
         <i class="devicon-git-plain-wordmark colored"></i>
-        <i class="devicon-vscode-plain-wordmark colored"></i>
         <i class="devicon-github-original-wordmark colored"></i>
-        <!-- <i class="devicon-docker-plain-wordmark colored"></i> -->
-        <p>My favorite tools for version control, code editing for development purpose.</p>
+        <i class="devicon-vscode-plain-wordmark colored"></i>
+    <i class="devicon-firebase-plain-wordmark colored"></i>
+        <p>Tools I use for version control, API testing, and a smooth development workflow.</p>
       </div>
+
     </div>
+
   </section>
 
   <!-- Projects Section -->
